--- a/manifests/deployments.yaml
+++ b/manifests/deployments.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: current-time-api
+  name: demo
   labels:
-    app: current-time-api
+    app: demo
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: current-time-api
+      app: demo
   template:
     metadata:
       labels:
-        app: current-time-api
+        app: demo
     spec:
       containers:
-      - name: current-time-api
-        image: tinegaonchari/current-time-api:latest
+      - name: demo
+        image: ash1425/current-time-api:latest
         ports:
         - containerPort: 3000
